--- a/teammapper-frontend/src/app/modules/application/pages/application/application.component.html
+++ b/teammapper-frontend/src/app/modules/application/pages/application/application.component.html
@@ -18,8 +18,7 @@
   <div class="map-wrapper">
     <teammapper-map></teammapper-map>
     <teammapper-links-layer
-      [links]="links"
-      [linkingFrom]="linkingFrom"
+      [selectedNodeId]="selectedNodeId"
       [cursor]="cursor"
     ></teammapper-links-layer>
   </div>
