--- a/teammapper-frontend/src/app/modules/application/components/links-layer/links-layer.component.scss
+++ b/teammapper-frontend/src/app/modules/application/components/links-layer/links-layer.component.scss
@@ -7,6 +7,12 @@
   pointer-events: none; // let the map below handle normal clicks
 }
 
+.links-svg {
+  width: 100%;
+  height: 100%;
+  // make the SVG fill the whole links layer
+}
+
 line {
   stroke: #666;
   stroke-width: 2;
