--- a/teammapper-frontend/src/app/modules/application/components/links-layer/links-layer.component.html
+++ b/teammapper-frontend/src/app/modules/application/components/links-layer/links-layer.component.html
@@ -3,17 +3,21 @@
   <ng-container *ngFor="let link of links">
     <g (mouseenter)="hovered = link.id" (mouseleave)="hovered = null">
       <line
-        [attr.x1]="getPos(link.from).x"
-        [attr.y1]="getPos(link.from).y"
-        [attr.x2]="getPos(link.to).x"
-        [attr.y2]="getPos(link.to).y"
+        [attr.x1]="getPos(link.fromNodeId).x"
+        [attr.y1]="getPos(link.fromNodeId).y"
+        [attr.x2]="getPos(link.toNodeId).x"
+        [attr.y2]="getPos(link.toNodeId).y"
         [ngClass]="{ hovered: hovered === link.id }"
         pointer-events="stroke"
       ></line>
       <text
         *ngIf="hovered === link.id"
-        [attr.x]="(getPos(link.from).x + getPos(link.to).x) / 2"
-        [attr.y]="(getPos(link.from).y + getPos(link.to).y) / 2"
+        [attr.x]="
+          (getPos(link.fromNodeId).x + getPos(link.toNodeId).x) / 2
+        "
+        [attr.y]="
+          (getPos(link.fromNodeId).y + getPos(link.toNodeId).y) / 2
+        "
         class="delete"
         (click)="delete(link.id)"
       >
