--- a/teammapper-frontend/src/app/modules/application/pages/application/application.component.scss
+++ b/teammapper-frontend/src/app/modules/application/pages/application/application.component.scss
@@ -10,5 +10,7 @@ div.teammapper-application {
 
   teammapper-map {
     height: 100%;
+    position: relative;
+    z-index: 1; // place nodes above links
   }
 }
