fix: layer links beneath nodes

--- a/teammapper-frontend/src/app/modules/application/pages/application/application.component.scss
+++ b/teammapper-frontend/src/app/modules/application/pages/application/application.component.scss
@@ -6,9 +6,15 @@ div.teammapper-application {
   .map-wrapper {
     position: relative;
     flex: 1;
-  }
 
-  teammapper-map {
-    height: 100%;
+    teammapper-map {
+      position: relative;
+      z-index: 1; // place nodes above links
+      height: 100%;
+    }
+
+    teammapper-links-layer {
+      z-index: 0; // links stay underneath nodes
+    }
   }
 }
