--- a/teammapper-frontend/src/app/modules/application/components/links-layer/links-layer.component.html
+++ b/teammapper-frontend/src/app/modules/application/components/links-layer/links-layer.component.html
@@ -7,6 +7,10 @@
         [attr.y1]="getPos(link.fromNodeId).y"
         [attr.x2]="getPos(link.toNodeId).x"
         [attr.y2]="getPos(link.toNodeId).y"
+        [attr.stroke]="link.style?.color || '#666'"
+        [attr.stroke-width]="link.style?.width ?? 2"
+        [attr.stroke-dasharray]="link.style?.dash || null"
+        [attr.stroke-opacity]="link.style?.opacity ?? 1"
         [ngClass]="{ hovered: hovered === link.id }"
         pointer-events="stroke"
       ></line>
