--- a/teammapper-frontend/src/app/modules/application/components/links-layer/links-layer.component.scss
+++ b/teammapper-frontend/src/app/modules/application/components/links-layer/links-layer.component.scss
@@ -7,15 +7,11 @@
   pointer-events: none; // let the map below handle normal clicks
 }
 
+
 .links-svg {
   width: 100%;
   height: 100%;
   // make the SVG fill the whole links layer
-}
-
-line {
-  stroke: #666;
-  stroke-width: 2;
 }
 
 line.hovered {
@@ -23,6 +19,8 @@ line.hovered {
 }
 
 line.temp {
+  stroke: #666; // default gray
+  stroke-width: 2; // default width
   stroke-dasharray: 4; // dashed temporary line
 }
 
