feat: add shape handler

--- a/teammapper-frontend/src/app/modules/application/components/toolbar/toolbar.component.html
+++ b/teammapper-frontend/src/app/modules/application/components/toolbar/toolbar.component.html
@@ -99,6 +99,14 @@
     <mat-icon>add_comment</mat-icon>
   </button>
   <button
+    (click)="addCircle()"
+    [title]="'Add circle'"
+    [disabled]="editDisabled"
+    color="primary"
+    mat-icon-button>
+    <mat-icon>radio_button_unchecked</mat-icon>
+  </button>
+  <button
     (click)="mmpService.copyNode()"
     [title]="'TOOLTIPS.COPY_NODE' | translate"
     [disabled]="editDisabled"
