--- a/teammapper-frontend/src/app/modules/application/pages/application/application.component.html
+++ b/teammapper-frontend/src/app/modules/application/pages/application/application.component.html
@@ -21,5 +21,6 @@
       [selectedNodeId]="selectedNodeId"
       [cursor]="cursor"
     ></teammapper-links-layer>
+    <teammapper-shapes-layer></teammapper-shapes-layer>
   </div>
 </div>
