--- a/teammapper-frontend/src/app/modules/application/components/shapes-layer/shapes-layer.component.scss
+++ b/teammapper-frontend/src/app/modules/application/components/shapes-layer/shapes-layer.component.scss
@@ -14,10 +14,14 @@
 .shape {
   position: absolute;
   border-radius: 50%;
-  pointer-events: all;
+  pointer-events: none;
   border: 2px solid;
   background: transparent;
   box-sizing: border-box;
+}
+
+:host.drawing .shape {
+  pointer-events: all;
 }
 
 .shape.selected {
