--- a/teammapper-frontend/src/app/modules/application/components/shapes-layer/shapes-layer.component.html
+++ b/teammapper-frontend/src/app/modules/application/components/shapes-layer/shapes-layer.component.html
@@ -1,31 +1,33 @@
-<div
-  *ngFor="let shape of shapes"
-  class="shape"
-  [class.selected]="shape.id === selectedId"
-  [style.left.px]="shape.x - shape.radius"
-  [style.top.px]="shape.y - shape.radius"
-  [style.width.px]="shape.radius * 2"
-  [style.height.px]="shape.radius * 2"
-  [style.border-color]="shape.color"
-  (mousedown)="selectShape($event, shape.id)"
->
-  <button
-    *ngIf="shape.id === selectedId"
-    class="delete-button"
-    (mousedown)="deleteShape($event, shape.id)"
-  >
-    ×
-  </button>
+<div class="wrapper" [style.transform]="mmpService.mapTransform()">
   <div
-    *ngIf="shape.id === selectedId"
-    class="move-handle"
+    *ngFor="let shape of shapes"
+    class="shape"
+    [class.selected]="shape.id === selectedId"
+    [style.left.px]="shape.x - shape.radius"
+    [style.top.px]="shape.y - shape.radius"
+    [style.width.px]="shape.radius * 2"
+    [style.height.px]="shape.radius * 2"
     [style.border-color]="shape.color"
-    (mousedown)="startMove($event, shape)"
-  ></div>
-  <div
-    *ngIf="shape.id === selectedId"
-    class="resize-handle"
-    [style.background]="shape.color"
-    (mousedown)="startResize($event, shape)"
-  ></div>
+    (mousedown)="selectShape($event, shape.id)"
+  >
+    <button
+      *ngIf="shape.id === selectedId"
+      class="delete-button"
+      (mousedown)="deleteShape($event, shape.id)"
+    >
+      ×
+    </button>
+    <div
+      *ngIf="shape.id === selectedId"
+      class="move-handle"
+      [style.border-color]="shape.color"
+      (mousedown)="startMove($event, shape)"
+    ></div>
+    <div
+      *ngIf="shape.id === selectedId"
+      class="resize-handle"
+      [style.background]="shape.color"
+      (mousedown)="startResize($event, shape)"
+    ></div>
+  </div>
 </div>
