--- a/teammapper-frontend/src/app/modules/application/components/shapes-layer/shapes-layer.component.scss
+++ b/teammapper-frontend/src/app/modules/application/components/shapes-layer/shapes-layer.component.scss
@@ -11,6 +11,15 @@
   pointer-events: all;
 }
 
+.wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-origin: 0 0;
+}
+
 .shape {
   position: absolute;
   border-radius: 50%;
